--- a/src/partie_3.tex
+++ b/src/partie_3.tex
@@ -443,6 +443,7 @@ Le serveur de rapports est installé sur la même machine que celle de la base d
 \subsubsection{Interface utilisateur}
 
 \Jparagraph{Silverlight}
+\label{Silverlight}
 
 Microsoft \textit{Silverlight} [Silverlight] est un plugin pour navigateur web.
 Il permet le développement d'applications riches et de pousser plus loin l'expérience utilisateur du web 2.0, au même titre qu'Adobe Flash dont il se veut une alternative.
