Avancement de CMS

--- a/src/partie_3.tex
+++ b/src/partie_3.tex
@@ -196,6 +196,7 @@ Le principal avantage de cette solution est la mise en commun des comptes utilis
 
 
 \Jparagraph{Gestion des droits}
+\label{Gestion des droits}
 
 Il est aussi possible de gérer des droits dans l'application grâce à ce socle.
 L'administrateur peut ainsi contrôler les accès et les actions des utilisateurs, protégeant ainsi les informations confidentielles.
