--- a/Rapport.tex
+++ b/Rapport.tex
@@ -47,7 +47,7 @@
 
 
 %%%%%%%%%% Informations %%%%%%%%%%
-\title{Développement d'une application de recrutement}
+\title{Stage chez Sopra Group}
 \author{\href{mailto:pinguet62@gmail.com}{Julien PINGUET}}
 \date{Avril-Septembre 2013}
 
