--- a/src/page_de_garde.tex
+++ b/src/page_de_garde.tex
@@ -94,11 +94,18 @@
 		%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 	
 		% Auteur & Encadrants
-		\begin{minipage}{0.7\textwidth} % à adapter en fonction du contenu
-			\textit{Présenté par :} \@author
-		\end{minipage}
+		\mbox{\textit{Présenté par :} \@author}
 		
-		\mbox{\textit{Sous la direction de :} Claude MAZEL}
+		\mbox{\textit{Tuteur ISIMA :} \href{mailto:claude.mazel@isima.fr}{Claude MAZEL}}
+		
+		\mbox{\textit{Sous la direction de :}
+			\begin{minipage}[t]{0.7\textwidth}
+				\href{mailto:delphine.jarrige@sopragroup.com}{Delphine JARIGE}
+				
+				\href{mailto:Laurent.LAFFERRERE@limagrain.com}{Laurent LAFFERRÈRE}
+				
+				\href{mailto:pierre.dascher@sopragroup.com}{Pierre DASCHER}
+			\end{minipage}}
 		
 		%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 		
