--- a/src/introduction.tex
+++ b/src/introduction.tex
@@ -10,47 +10,26 @@
 %%%%%%%%%% Context %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-%%%%%%%%%% Contexte général %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-Dans de nombreux contextes le gain de temps est le maître mot.
-Le domaine professionnel ne fait pas exception à la règle, imposant une productivité de plus en plus élevée.
-Ainsi l'utilisation d'outils de plus en plus performants permet de minimiser le temps passé à effectuer une tâche.
-
-%%%%%%%%%% Context de l'entreprise %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-Limagrain utilise un outil de recrutement, développé il y a plus de dix ans par un membre de service ne possédant pas de compétence en développement.
-Vu le nombre de recrutements de plus en plus élevé, et  l'augmentation de la charge de travail, Limagrain désire faire évoluer son outil pour faciliter le processus actuel.
+Plusieurs projets
 \\
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%% Problème %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-Le passage des années, ainsi que l'évolution des besoins, impose une mise à niveau permanente des outils informatiques.
-Mais lorsque ceux-ci utilisent des technologies trop anciennes, et ne possèdent pas une architecture évolutive, il est rarement possible d'intervenir.
-La meilleure solution est donc une ré-implémentation complète de l'outil, amenant alors à une solution structurée qui pourra évoluer facilement aux cours des années.
-\\
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%% Objectif %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-L'objet de cette étude sera d'étudier les besoins du client, puis d'implémenter la nouvelle solution.
-Celle-ci devra remplir les mêmes fonctions que celle actuelle, en permettant l'ajout de nouvelles.
+L'objectif de ce stage de fin d'étude est de mettre en pratique mes diverses connaissances acquises durant ma scolarité sur divers projets, à la fois dans le domaine technique que fonctionnel.
 \\
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%% Démarche et plan %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-%%%%%%%%%% Démarche %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+Dans ce rapport je présenterai mon intégration dans la société de service en ingénierie informatique qu'est Sopra Group et le travail que j'ai réalisé.
 
-L'étude de la solution actuelle et l'étude des besoins de l'utilisateur permettront de modéliser la nouvelle solution.
-L'implémentation d'une première version de l'application permettra de soulever les problèmes existants et d'émettre les points d'amélioration.
-Enfin la mise en production et l'importation des anciennes données ont permis au client d'utiliser l'application.
-
-%%%%%%%%%% Plan %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-Tout d'abord, j'analyserai précisément le sujet, en présentant l'entreprise, ainsi que la solution actuelle et celle envisagée.
-Dans un deuxième temps, je présenterai l'environnement de travail et la structure du projet.
-Pour terminer, je présenterai la solution obtenue et les différents points d'améliorations possibles.
+Je présenterai tout d'abord mes différentes tâches sur le projet Sides qui ma permis d'intégrer Sopra Group.
+Dans un second temps je présenterai le projet pour Limagrain.
+Enfin je présenterai le projet pour l'Imprimerie Nationale effectué en fin de stage.
